# contract-storage-vec

./: .gitignore  Cargo.toml  Forc.toml
src/: main.sw
tests/: harness.rs
