[project]
name = "test-contract"
version = "0.1.0"
authors = ["Luiz Estacio"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.49", features = ["fuel-core-lib"] }
tokio = { version = "1.33", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
